data/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Addtional_Materials_Needed__c</fullName>
        <inlineHelpText>Max 254 characters.</inlineHelpText>
        <label>Addtional Materials Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Details__c</fullName>
        <label>Alert Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Name__c</fullName>
        <description>Used for automations and reporting.</description>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for automations and reporting.</inlineHelpText>
        <label>Assigned Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Visit_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Best In Class</fullName>
                </value>
                <value>
                    <fullName>Energy Award Excellence</fullName>
                </value>
                <value>
                    <fullName>Energy Excellence</fullName>
                </value>
                <value>
                    <fullName>Energy Star</fullName>
                </value>
                <value>
                    <fullName>Energy Star and Best In Class</fullName>
                </value>
                <value>
                    <fullName>Environment Excellence</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Check_Given_to_EC__c</fullName>
        <label>Bonus Check Given to EC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color_Event__c</fullName>
        <label>Color_Event</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting-Virtual</fullName>
                </value>
                <value>
                    <fullName>Meeting-In Person</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Meeting</fullName>
                    <isActive>false</isActive>
                    <label>Cenergistic Meeting</label>
                </value>
                <value>
                    <fullName>Client Meeting</fullName>
                    <isActive>false</isActive>
                    <label>Client Meeting</label>
                </value>
                <value>
                    <fullName>MC Meeting</fullName>
                    <isActive>false</isActive>
                    <label>MC Meeting</label>
                </value>
                <value>
                    <fullName>Other Meeting</fullName>
                    <isActive>false</isActive>
                    <label>Other Meeting</label>
                </value>
                <value>
                    <fullName>Prospect Meeting</fullName>
                    <isActive>false</isActive>
                    <label>Prospect Meeting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Attendee_List__c</fullName>
        <label>Create Attendee List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_CVR__c</fullName>
        <label>Create CVR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Follow_up__c</fullName>
        <label>Create Follow-up</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D365ActivityID__c</fullName>
        <externalId>true</externalId>
        <label>D365ActivityID</label>
        <length>52</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>D365RegardingGuid__c</fullName>
        <label>D365RegardingGuid</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEI_Calendar__c</fullName>
        <label>EEI Calendar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Program_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Connect Appointment to an EP with Service Status IC</inlineHelpText>
        <label>Energy Program Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Energy_Program__c.Service_Status__c</field>
                <operation>equals</operation>
                <value>IC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Participants__c</fullName>
        <inlineHelpText>A place to capture up to 6 names for those that participated in the meeting.</inlineHelpText>
        <label>Event Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Reporting__c</fullName>
        <label>Exclude from Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Owner__c</fullName>
        <description>D365 Owner</description>
        <label>Legacy Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The main MC on the opportunity</inlineHelpText>
        <label>MC Primary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>ActivitiesMC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meet_with_PL__c</fullName>
        <label>Meet with PL?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meet_with_Supt__c</fullName>
        <label>Meet with Supt?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Date_Time__c</fullName>
        <label>Notification Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Timer__c</fullName>
        <label>Notification Timer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connect Appointment to an Opportunity.</description>
        <inlineHelpText>Connect Appointment to an Opportunity.</inlineHelpText>
        <label>Opportunity Lookup</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <label>Org Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Connect Appointment to an Organization.</inlineHelpText>
        <label>Organization Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Push_to_D365__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to D365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Meeting_Type__c</fullName>
        <label>Sales Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Non-Sales Call</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Support_Alert__c</fullName>
        <label>Sales Support Alert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Weekly_Report__c</fullName>
        <label>Sales Weekly Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Out of Office</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <label>Status Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <color>#3366FF</color>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#33CC00</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <color>#F3D904</color>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                    <isActive>false</isActive>
                    <label>Scheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Owner__c</fullName>
        <label>Subject Owner</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supt_Present__c</fullName>
        <label>Supt Present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracked_Meeting__c</fullName>
        <label>Tracked Meeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Day__c</fullName>
        <label>Travel Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This is for Event Type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Visit</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Scheduled Off</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                    <isActive>false</isActive>
                    <label>COE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Length_Days__c</fullName>
        <formula>CASE(Visit_Length__c,
    &quot;1/8 Day&quot;,                    0.125,
    &quot;1/4 Day&quot;,                    0.25,
    &quot;1/3 Day (3 visits per day)&quot;, 0.333,
    &quot;1/2 Day&quot;,                    0.5,
    &quot;3/4 Day&quot;,                    0.75,
    &quot;1 Full Day&quot;,                 1.0,
    &quot;1 1/2 Day&quot;,                  1.5,
    &quot;2 Full Days&quot;,                2.0,
    &quot;2 1/2 Day&quot;,                  2.5,
    &quot;3 Full Days&quot;,                3.0,
    &quot;4 Full Days&quot;,                4.0,
    &quot;5 Full Days&quot;,                5.0,
    ActivityDate - ActivityDate + 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Length Days</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Length__c</fullName>
        <label>Visit Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 1/2 Day</fullName>
                </value>
                <value>
                    <fullName>1 Full Day</fullName>
                </value>
                <value>
                    <fullName>1/2 Day</fullName>
                </value>
                <value>
                    <fullName>1/3 Day (3 visits per day)</fullName>
                </value>
                <value>
                    <fullName>1/4 Day</fullName>
                </value>
                <value>
                    <fullName>2 1/2 Day</fullName>
                </value>
                <value>
                    <fullName>2 Full Days</fullName>
                </value>
                <value>
                    <fullName>3 Full Days</fullName>
                </value>
                <value>
                    <fullName>3/4 Day</fullName>
                </value>
                <value>
                    <fullName>4 Full Days</fullName>
                </value>
                <value>
                    <fullName>5 Full Days</fullName>
                </value>
                <value>
                    <fullName>1/8 Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Task__c</fullName>
        <inlineHelpText>Max 254 characters.</inlineHelpText>
        <label>Visit Task</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Type_Abbreviation__c</fullName>
        <description>Populated via a flow based on the value in the Visit Type field. Only visible to Sys Admin and not on any page layouts.</description>
        <label>Visit Type Abbreviation</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type_Name__c</fullName>
        <description>Used for automations and reporting.</description>
        <formula>TEXT ( Visit_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>90 Day Implementation Feedback</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>AIM EMAP</fullName>
                </value>
                <value>
                    <fullName>Board Action</fullName>
                    <label>Board Vote</label>
                </value>
                <value>
                    <fullName>Board Committee</fullName>
                    <label>Board Info/Committee</label>
                </value>
                <value>
                    <fullName>Board Meeting</fullName>
                </value>
                <value>
                    <fullName>Board Preparation Visit</fullName>
                </value>
                <value>
                    <fullName>Board Report</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Cenergistic CRM</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Internal Mtg</fullName>
                </value>
                <value>
                    <fullName>Cenergistic Meeting</fullName>
                </value>
                <value>
                    <fullName>Cenergistic NTC</fullName>
                </value>
                <value>
                    <fullName>CFU</fullName>
                </value>
                <value>
                    <fullName>CFU Award</fullName>
                </value>
                <value>
                    <fullName>CFU-Award</fullName>
                    <label>Award (CFU)</label>
                </value>
                <value>
                    <fullName>CFU-CA</fullName>
                </value>
                <value>
                    <fullName>CFU-OPS</fullName>
                </value>
                <value>
                    <fullName>Church Assement</fullName>
                </value>
                <value>
                    <fullName>CM Training</fullName>
                </value>
                <value>
                    <fullName>Corporate Travel</fullName>
                </value>
                <value>
                    <fullName>CRM Training</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>CVR-Orientation CPR-Implementation Visit</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Data/Adj Blitz</fullName>
                </value>
                <value>
                    <fullName>Data Blitz</fullName>
                </value>
                <value>
                    <fullName>Data Implementation Performance Progress</fullName>
                </value>
                <value>
                    <fullName>Data Orientation</fullName>
                </value>
                <value>
                    <fullName>Data Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vsa__Assigned_To_RO__c</fullName>
        <description>Used to display the name of the Assigned to User in the Create Mutual Plan Flow</description>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__ComponentId__c</fullName>
        <label>Component Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Phase 3</fullName>
                </value>
                <value>
                    <fullName>Phase 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vsa__Predecessor__c</fullName>
        <label>Predecessor</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Resource__c</fullName>
        <label>Resource</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vsa__Reverse_Timeline_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Timeline Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vsa__Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vsa__VSAccountPlanningPrinciples</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vsa__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vsa__Subject_RO__c</fullName>
        <description>Consumed in the create Mutual Plan flow to display the subject of the Tasks being selected</description>
        <formula>Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>